@@ -18,12 +18,16 @@
  */
 package org.apache.fineract.infrastructure.dataqueries.service;
 
+import com.google.common.base.Splitter;
+import com.google.common.collect.ImmutableMap;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.reflect.TypeToken;
 import java.lang.reflect.Type;
 import java.math.BigDecimal;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -33,10 +37,10 @@ import java.util.Map;
 import java.util.Set;
 import javax.persistence.PersistenceException;
 import javax.sql.DataSource;
-import org.apache.commons.lang.BooleanUtils;
-import org.apache.commons.lang.StringUtils;
-import org.apache.commons.lang.exception.ExceptionUtils;
+import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.ObjectUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.fineract.infrastructure.codes.service.CodeReadPlatformService;
 import org.apache.fineract.infrastructure.configuration.domain.ConfigurationDomainService;
 import org.apache.fineract.infrastructure.core.api.JsonCommand;
@@ -65,8 +69,6 @@ import org.apache.fineract.infrastructure.security.service.PlatformSecurityConte
 import org.apache.fineract.infrastructure.security.utils.ColumnValidator;
 import org.apache.fineract.infrastructure.security.utils.SQLInjectionValidator;
 import org.apache.fineract.useradministration.domain.AppUser;
-import org.joda.time.LocalDate;
-import org.joda.time.LocalDateTime;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -78,32 +80,23 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.jdbc.support.rowset.SqlRowSet;
 import org.springframework.jdbc.support.rowset.SqlRowSetMetaData;
+import org.springframework.orm.jpa.JpaSystemException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataService {
 
-    private final static String DATATABLE_NAME_REGEX_PATTERN = "^[a-zA-Z][a-zA-Z0-9\\-_\\s]{0,48}[a-zA-Z0-9]$";
+    private static final String DATATABLE_NAME_REGEX_PATTERN = "^[a-zA-Z][a-zA-Z0-9\\-_\\s]{0,48}[a-zA-Z0-9]$";
 
-    private final static String CODE_VALUES_TABLE = "m_code_value";
+    private static final String CODE_VALUES_TABLE = "m_code_value";
 
-    private final static Logger logger = LoggerFactory.getLogger(ReadWriteNonCoreDataServiceImpl.class);
-    private final static HashMap<String, String> apiTypeToMySQL = new HashMap<String, String>() {
+    private static final Logger LOG = LoggerFactory.getLogger(ReadWriteNonCoreDataServiceImpl.class);
+    private static final ImmutableMap<String, String> apiTypeToMySQL = ImmutableMap.<String, String>builder().put("string", "VARCHAR")
+            .put("number", "INT").put("boolean", "BIT").put("decimal", "DECIMAL").put("date", "DATE").put("datetime", "DATETIME")
+            .put("text", "TEXT").put("dropdown", "INT").build();
 
-        {
-            put("string", "VARCHAR");
-            put("number", "INT");
-            put("boolean", "BIT");
-            put("decimal", "DECIMAL");
-            put("date", "DATE");
-            put("datetime", "DATETIME");
-            put("text", "TEXT");
-            put("dropdown", "INT");
-        }
-    };
-
-    private final static List<String> stringDataTypes = Arrays.asList("char", "varchar", "blob", "text", "tinyblob", "tinytext",
+    private static final List<String> stringDataTypes = Arrays.asList("char", "varchar", "blob", "text", "tinyblob", "tinytext",
             "mediumblob", "mediumtext", "longblob", "longtext");
 
     private final JdbcTemplate jdbcTemplate;
@@ -206,7 +199,7 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
     }
 
     private void logAsErrorUnexpectedDataIntegrityException(final Exception dve) {
-        logger.error(dve.getMessage(), dve);
+        LOG.error("Error occured.", dve);
     }
 
     @Transactional
@@ -215,8 +208,8 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
 
         Integer category = DataTableApiConstant.CATEGORY_DEFAULT;
 
-        final String permissionSql = this._getPermissionSql(dataTableName);
-        this._registerDataTable(applicationTableName, dataTableName, category, permissionSql);
+        final String permissionSql = this.getPermissionSql(dataTableName);
+        this.registerDataTable(applicationTableName, dataTableName, category, permissionSql);
 
     }
 
@@ -230,8 +223,8 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
         Integer category = this.getCategory(command);
 
         this.dataTableValidator.validateDataTableRegistration(command.json());
-        final String permissionSql = this._getPermissionSql(dataTableName);
-        this._registerDataTable(applicationTableName, dataTableName, category, permissionSql);
+        final String permissionSql = this.getPermissionSql(dataTableName);
+        this.registerDataTable(applicationTableName, dataTableName, category, permissionSql);
 
     }
 
@@ -245,12 +238,12 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
 
         this.dataTableValidator.validateDataTableRegistration(command.json());
 
-        this._registerDataTable(applicationTableName, dataTableName, category, permissionSql);
+        this.registerDataTable(applicationTableName, dataTableName, category, permissionSql);
 
     }
 
     @Transactional
-    private void _registerDataTable(final String applicationTableName, final String dataTableName, final Integer category,
+    private void registerDataTable(final String applicationTableName, final String dataTableName, final Integer category,
             final String permissionsSql) {
 
         validateAppTable(applicationTableName);
@@ -269,39 +262,38 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
 
             // add the registered table to the config if it is a ppi
             if (this.isSurveyCategory(category)) {
-                this.namedParameterJdbcTemplate.update("insert into c_configuration (name, value, enabled ) values( :dataTableName , '0','0')", paramMap);
+                this.namedParameterJdbcTemplate
+                        .update("insert into c_configuration (name, value, enabled ) values( :dataTableName , '0','0')", paramMap);
             }
 
-        }
-        catch (final DataIntegrityViolationException dve) {
-            final Throwable cause = dve.getCause() ;
+        } catch (final JpaSystemException | DataIntegrityViolationException dve) {
+            final Throwable cause = dve.getCause();
             final Throwable realCause = dve.getMostSpecificCause();
             // even if duplicate is only due to permission duplicate, okay to
             // show duplicate datatable error msg
-            if (realCause.getMessage()
-                    .contains("Duplicate entry") || cause.getMessage()
-                    .contains("Duplicate entry")) {
+            if (realCause.getMessage().contains("Duplicate entry") || cause.getMessage().contains("Duplicate entry")) {
                 throw new PlatformDataIntegrityException("error.msg.datatable.registered",
-                            "Datatable `" + dataTableName + "` is already registered against an application table.", "dataTableName",
-                            dataTableName); }
+                        "Datatable `" + dataTableName + "` is already registered against an application table.", "dataTableName",
+                        dataTableName, dve);
+            }
             logAsErrorUnexpectedDataIntegrityException(dve);
             throw new PlatformDataIntegrityException("error.msg.unknown.data.integrity.issue",
-                    "Unknown data integrity issue with resource.");
-        }catch (final PersistenceException dve) {
-            final Throwable cause = dve.getCause() ;
-            if (cause.getMessage()
-                    .contains("Duplicate entry")) {
+                    "Unknown data integrity issue with resource.", dve);
+        } catch (final PersistenceException dve) {
+            final Throwable cause = dve.getCause();
+            if (cause.getMessage().contains("Duplicate entry")) {
                 throw new PlatformDataIntegrityException("error.msg.datatable.registered",
-                            "Datatable `" + dataTableName + "` is already registered against an application table.", "dataTableName",
-                            dataTableName); }
+                        "Datatable `" + dataTableName + "` is already registered against an application table.", "dataTableName",
+                        dataTableName, dve);
+            }
             logAsErrorUnexpectedDataIntegrityException(dve);
             throw new PlatformDataIntegrityException("error.msg.unknown.data.integrity.issue",
-                    "Unknown data integrity issue with resource.");
+                    "Unknown data integrity issue with resource.", dve);
         }
 
     }
 
-    private String _getPermissionSql(final String dataTableName) {
+    private String getPermissionSql(final String dataTableName) {
         final String createPermission = "'CREATE_" + dataTableName + "'";
         final String createPermissionChecker = "'CREATE_" + dataTableName + "_CHECKER'";
         final String readPermission = "'READ_" + dataTableName + "'";
@@ -322,7 +314,9 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
 
     private Integer getCategory(final JsonCommand command) {
         Integer category = command.integerValueOfParameterNamedDefaultToNullIfZero(DataTableApiConstant.categoryParamName);
-        if (category == null) category = DataTableApiConstant.CATEGORY_DEFAULT;
+        if (category == null) {
+            category = DataTableApiConstant.CATEGORY_DEFAULT;
+        }
         return category;
     }
 
@@ -333,16 +327,16 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
     @Override
     public String getDataTableName(String url) {
 
-        String[] urlParts = url.split("/");
+        List<String> urlParts = Splitter.on('/').splitToList(url);
 
-        return urlParts[3];
+        return urlParts.get(3);
 
     }
 
     @Override
     public String getTableName(String url) {
-        String[] urlParts = url.split("/");
-        return urlParts[4];
+        List<String> urlParts = Splitter.on('/').splitToList(url);
+        return urlParts.get(4);
     }
 
     @Transactional
@@ -395,33 +389,41 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             return commandProcessingResult; //
 
         } catch (final DataAccessException dve) {
-            final Throwable cause = dve.getCause() ;
+            final Throwable cause = dve.getCause();
             final Throwable realCause = dve.getMostSpecificCause();
             if (realCause.getMessage().contains("Duplicate entry") || cause.getMessage().contains("Duplicate entry")) {
-                throw new PlatformDataIntegrityException("error.msg.datatable.entry.duplicate", "An entry already exists for datatable `"
-                        + dataTableName + "` and application table with identifier `" + appTableId + "`.", "dataTableName", dataTableName,
-                        appTableId);
+                throw new PlatformDataIntegrityException(
+                        "error.msg.datatable.entry.duplicate", "An entry already exists for datatable `" + dataTableName
+                                + "` and application table with identifier `" + appTableId + "`.",
+                        "dataTableName", dataTableName, appTableId, dve);
             } else if (realCause.getMessage().contains("doesn't have a default value")
-                    || cause.getMessage().contains("doesn't have a default value")) { throw new PlatformDataIntegrityException(
-                    "error.msg.datatable.no.value.provided.for.required.fields", "No values provided for the datatable `" + dataTableName
-                            + "` and application table with identifier `" + appTableId + "`.", "dataTableName", dataTableName, appTableId); }
+                    || cause.getMessage().contains("doesn't have a default value")) {
+                throw new PlatformDataIntegrityException(
+                        "error.msg.datatable.no.value.provided.for.required.fields", "No values provided for the datatable `"
+                                + dataTableName + "` and application table with identifier `" + appTableId + "`.",
+                        "dataTableName", dataTableName, appTableId, dve);
+            }
 
             logAsErrorUnexpectedDataIntegrityException(dve);
             throw new PlatformDataIntegrityException("error.msg.unknown.data.integrity.issue",
-                    "Unknown data integrity issue with resource.");
+                    "Unknown data integrity issue with resource.", dve);
         } catch (final PersistenceException e) {
             final Throwable cause = e.getCause();
             if (cause.getMessage().contains("Duplicate entry")) {
-                throw new PlatformDataIntegrityException("error.msg.datatable.entry.duplicate", "An entry already exists for datatable `"
-                        + dataTableName + "` and application table with identifier `" + appTableId + "`.", "dataTableName", dataTableName,
-                        appTableId);
-            } else if (cause.getMessage().contains("doesn't have a default value")) { throw new PlatformDataIntegrityException(
-                    "error.msg.datatable.no.value.provided.for.required.fields", "No values provided for the datatable `" + dataTableName
-                            + "` and application table with identifier `" + appTableId + "`.", "dataTableName", dataTableName, appTableId); }
+                throw new PlatformDataIntegrityException(
+                        "error.msg.datatable.entry.duplicate", "An entry already exists for datatable `" + dataTableName
+                                + "` and application table with identifier `" + appTableId + "`.",
+                        "dataTableName", dataTableName, appTableId, e);
+            } else if (cause.getMessage().contains("doesn't have a default value")) {
+                throw new PlatformDataIntegrityException(
+                        "error.msg.datatable.no.value.provided.for.required.fields", "No values provided for the datatable `"
+                                + dataTableName + "` and application table with identifier `" + appTableId + "`.",
+                        "dataTableName", dataTableName, appTableId, e);
+            }
 
             logAsErrorUnexpectedDataIntegrityException(e);
             throw new PlatformDataIntegrityException("error.msg.unknown.data.integrity.issue",
-                    "Unknown data integrity issue with resource.");
+                    "Unknown data integrity issue with resource.", e);
 
         }
     }
@@ -445,29 +447,30 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             return commandProcessingResult; //
 
         } catch (final DataAccessException dve) {
-            final Throwable cause = dve.getCause() ;
+            final Throwable cause = dve.getCause();
             final Throwable realCause = dve.getMostSpecificCause();
-            if (realCause.getMessage()
-                    .contains("Duplicate entry") || cause.getMessage()
-                    .contains("Duplicate entry")) { throw new PlatformDataIntegrityException(
-                            "error.msg.datatable.entry.duplicate", "An entry already exists for datatable `" + dataTableName
-                                    + "` and application table with identifier `" + appTableId + "`.",
-                            "dataTableName", dataTableName, appTableId); }
+            if (realCause.getMessage().contains("Duplicate entry") || cause.getMessage().contains("Duplicate entry")) {
+                throw new PlatformDataIntegrityException(
+                        "error.msg.datatable.entry.duplicate", "An entry already exists for datatable `" + dataTableName
+                                + "` and application table with identifier `" + appTableId + "`.",
+                        "dataTableName", dataTableName, appTableId, dve);
+            }
 
             logAsErrorUnexpectedDataIntegrityException(dve);
             throw new PlatformDataIntegrityException("error.msg.unknown.data.integrity.issue",
-                    "Unknown data integrity issue with resource.");
-        }catch (final PersistenceException dve) {
-            final Throwable cause = dve.getCause() ;
-            if (cause.getMessage()
-                    .contains("Duplicate entry")) { throw new PlatformDataIntegrityException(
-                            "error.msg.datatable.entry.duplicate", "An entry already exists for datatable `" + dataTableName
-                                    + "` and application table with identifier `" + appTableId + "`.",
-                            "dataTableName", dataTableName, appTableId); }
+                    "Unknown data integrity issue with resource.", dve);
+        } catch (final PersistenceException dve) {
+            final Throwable cause = dve.getCause();
+            if (cause.getMessage().contains("Duplicate entry")) {
+                throw new PlatformDataIntegrityException(
+                        "error.msg.datatable.entry.duplicate", "An entry already exists for datatable `" + dataTableName
+                                + "` and application table with identifier `" + appTableId + "`.",
+                        "dataTableName", dataTableName, appTableId, dve);
+            }
 
             logAsErrorUnexpectedDataIntegrityException(dve);
             throw new PlatformDataIntegrityException("error.msg.unknown.data.integrity.issue",
-                    "Unknown data integrity issue with resource.");
+                    "Unknown data integrity issue with resource.", dve);
         }
     }
 
@@ -475,45 +478,50 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
         // PERMITTED datatables
         final String sql = "select if((exists (select 1 from x_registered_table where registered_table_name = ?)) = 1, 'true', 'false')";
         final String isRegisteredDataTable = this.jdbcTemplate.queryForObject(sql, String.class, new Object[] { name });
-        return new Boolean(isRegisteredDataTable);
+        return Boolean.valueOf(isRegisteredDataTable);
     }
 
     private void assertDataTableExists(final String datatableName) {
         final String sql = "select if((exists (select 1 from information_schema.tables where table_schema = schema() and table_name = ?)) = 1, 'true', 'false')";
         final String dataTableExistsString = this.jdbcTemplate.queryForObject(sql, String.class, new Object[] { datatableName });
-        final boolean dataTableExists = new Boolean(dataTableExistsString);
-        if (!dataTableExists) { throw new PlatformDataIntegrityException("error.msg.invalid.datatable",
-                "Invalid Data Table: " + datatableName, "name", datatableName); }
+        final boolean dataTableExists = Boolean.valueOf(dataTableExistsString);
+        if (!dataTableExists) {
+            throw new PlatformDataIntegrityException("error.msg.invalid.datatable", "Invalid Data Table: " + datatableName, "name",
+                    datatableName);
+        }
     }
 
     private void validateDatatableName(final String name) {
 
         if (name == null || name.isEmpty()) {
             throw new PlatformDataIntegrityException("error.msg.datatables.datatable.null.name", "Data table name must not be blank.");
-        } else if (!name.matches(DATATABLE_NAME_REGEX_PATTERN)) { throw new PlatformDataIntegrityException(
-                "error.msg.datatables.datatable.invalid.name.regex", "Invalid data table name.", name); }
+        } else if (!name.matches(DATATABLE_NAME_REGEX_PATTERN)) {
+            throw new PlatformDataIntegrityException("error.msg.datatables.datatable.invalid.name.regex", "Invalid data table name.", name);
+        }
         SQLInjectionValidator.validateSQLInput(name);
     }
 
     private String datatableColumnNameToCodeValueName(final String columnName, final String code) {
 
-        return (code + "_cd_" + columnName);
+        return code + "_cd_" + columnName;
     }
 
     private void throwExceptionIfValidationWarningsExist(final List<ApiParameterError> dataValidationErrors) {
-        if (!dataValidationErrors.isEmpty()) { throw new PlatformApiDataValidationException("validation.msg.validation.errors.exist",
-                "Validation errors exist.", dataValidationErrors); }
+        if (!dataValidationErrors.isEmpty()) {
+            throw new PlatformApiDataValidationException("validation.msg.validation.errors.exist", "Validation errors exist.",
+                    dataValidationErrors);
+        }
     }
 
     private void parseDatatableColumnObjectForCreate(final JsonObject column, StringBuilder sqlBuilder,
             final StringBuilder constrainBuilder, final String dataTableNameAlias, final Map<String, Long> codeMappings,
             final boolean isConstraintApproach) {
 
-        String name = (column.has("name")) ? column.get("name").getAsString() : null;
-        final String type = (column.has("type")) ? column.get("type").getAsString().toLowerCase() : null;
-        final Integer length = (column.has("length")) ? column.get("length").getAsInt() : null;
-        final Boolean mandatory = (column.has("mandatory")) ? column.get("mandatory").getAsBoolean() : false;
-        final String code = (column.has("code")) ? column.get("code").getAsString() : null;
+        String name = column.has("name") ? column.get("name").getAsString() : null;
+        final String type = column.has("type") ? column.get("type").getAsString().toLowerCase() : null;
+        final Integer length = column.has("length") ? column.get("length").getAsInt() : null;
+        final Boolean mandatory = column.has("mandatory") ? column.get("mandatory").getAsBoolean() : false;
+        final String code = column.has("code") ? column.get("code").getAsString() : null;
 
         if (StringUtils.isNotBlank(code)) {
             if (isConstraintApproach) {
@@ -564,11 +572,10 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             Boolean multiRow = this.fromJsonHelper.extractBooleanNamed("multiRow", element);
 
             /***
-             * In cases of tables storing hierarchical entities (like m_group),
-             * different entities would end up being stored in the same table.
+             * In cases of tables storing hierarchical entities (like m_group), different entities would end up being
+             * stored in the same table.
              *
-             * Ex: Centers are a specific type of group, add abstractions for
-             * the same
+             * Ex: Centers are a specific type of group, add abstractions for the same
              ***/
             final String actualAppTableName = mapToActualAppTable(apptableName);
 
@@ -588,10 +595,9 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             sqlBuilder = sqlBuilder.append("CREATE TABLE `" + datatableName + "` (");
 
             if (multiRow) {
-                sqlBuilder = sqlBuilder.append("`id` BIGINT(20) NOT NULL AUTO_INCREMENT, ")
-                        .append("`" + fkColumnName + "` BIGINT(20) NOT NULL, ");
+                sqlBuilder = sqlBuilder.append("`id` BIGINT NOT NULL AUTO_INCREMENT, ").append("`" + fkColumnName + "` BIGINT NOT NULL, ");
             } else {
-                sqlBuilder = sqlBuilder.append("`" + fkColumnName + "` BIGINT(20) NOT NULL, ");
+                sqlBuilder = sqlBuilder.append("`" + fkColumnName + "` BIGINT NOT NULL, ");
             }
 
             for (final JsonElement column : columns) {
@@ -614,12 +620,12 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
 
             sqlBuilder.append(constrainBuilder);
 
-            sqlBuilder = sqlBuilder.append(") ENGINE=InnoDB DEFAULT CHARSET=utf8;");
+            sqlBuilder = sqlBuilder.append(") ENGINE=InnoDB DEFAULT CHARSET=UTF8MB4;");
             this.jdbcTemplate.execute(sqlBuilder.toString());
 
             registerDatatable(datatableName, apptableName);
             registerColumnCodeMapping(codeMappings);
-        } catch (final DataIntegrityViolationException e) {
+        } catch (final JpaSystemException | DataIntegrityViolationException e) {
             final Throwable realCause = e.getCause();
             final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
             final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource("datatable");
@@ -635,21 +641,21 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             }
 
             throwExceptionIfValidationWarningsExist(dataValidationErrors);
-        }catch (final PersistenceException | BadSqlGrammarException ee) {
-            Throwable realCause = ExceptionUtils.getRootCause(ee.getCause()) ;
-             final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
-             final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource("datatable");
-             if (realCause.getMessage().toLowerCase().contains("duplicate column name")) {
-                 baseDataValidator.reset().parameter("name").failWithCode("duplicate.column.name");
-             } else if (realCause.getMessage().contains("Table") && realCause.getMessage().contains("already exists")) {
-                 baseDataValidator.reset().parameter("datatableName").value(datatableName).failWithCode("datatable.already.exists");
-             } else if (realCause.getMessage().contains("Column") && realCause.getMessage().contains("big")) {
-                 baseDataValidator.reset().parameter("column").failWithCode("length.too.big");
-             } else if (realCause.getMessage().contains("Row") && realCause.getMessage().contains("large")) {
-                 baseDataValidator.reset().parameter("row").failWithCode("size.too.large");
-             }
+        } catch (final PersistenceException | BadSqlGrammarException ee) {
+            Throwable realCause = ExceptionUtils.getRootCause(ee.getCause());
+            final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
+            final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource("datatable");
+            if (realCause.getMessage().toLowerCase().contains("duplicate column name")) {
+                baseDataValidator.reset().parameter("name").failWithCode("duplicate.column.name");
+            } else if (realCause.getMessage().contains("Table") && realCause.getMessage().contains("already exists")) {
+                baseDataValidator.reset().parameter("datatableName").value(datatableName).failWithCode("datatable.already.exists");
+            } else if (realCause.getMessage().contains("Column") && realCause.getMessage().contains("big")) {
+                baseDataValidator.reset().parameter("column").failWithCode("length.too.big");
+            } else if (realCause.getMessage().contains("Row") && realCause.getMessage().contains("large")) {
+                baseDataValidator.reset().parameter("row").failWithCode("size.too.large");
+            }
 
-             throwExceptionIfValidationWarningsExist(dataValidationErrors);
+            throwExceptionIfValidationWarningsExist(dataValidationErrors);
         }
 
         return new CommandProcessingResultBuilder().withCommandId(command.commandId()).withResourceIdAsString(datatableName).build();
@@ -660,14 +666,14 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             final StringBuilder constrainBuilder, final Map<String, Long> codeMappings, final List<String> removeMappings,
             final boolean isConstraintApproach) {
 
-        String name = (column.has("name")) ? column.get("name").getAsString() : null;
-        final String lengthStr = (column.has("length")) ? column.get("length").getAsString() : null;
-        Integer length = (StringUtils.isNotBlank(lengthStr)) ? Integer.parseInt(lengthStr) : null;
-        String newName = (column.has("newName")) ? column.get("newName").getAsString() : name;
-        final Boolean mandatory = (column.has("mandatory")) ? column.get("mandatory").getAsBoolean() : false;
-        final String after = (column.has("after")) ? column.get("after").getAsString() : null;
-        final String code = (column.has("code")) ? column.get("code").getAsString() : null;
-        final String newCode = (column.has("newCode")) ? column.get("newCode").getAsString() : null;
+        String name = column.has("name") ? column.get("name").getAsString() : null;
+        final String lengthStr = column.has("length") ? column.get("length").getAsString() : null;
+        Integer length = StringUtils.isNotBlank(lengthStr) ? Integer.parseInt(lengthStr) : null;
+        String newName = column.has("newName") ? column.get("newName").getAsString() : name;
+        final Boolean mandatory = column.has("mandatory") ? column.get("mandatory").getAsBoolean() : false;
+        final String after = column.has("after") ? column.get("after").getAsString() : null;
+        final String code = column.has("code") ? column.get("code").getAsString() : null;
+        final String newCode = column.has("newCode") ? column.get("newCode").getAsString() : null;
         final String dataTableNameAlias = datatableName.toLowerCase().replaceAll("\\s", "_");
         if (isConstraintApproach) {
             if (StringUtils.isBlank(newName)) {
@@ -713,8 +719,10 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
                 }
             }
         }
-        if (!mapColumnNameDefinition.containsKey(name)) { throw new PlatformDataIntegrityException(
-                "error.msg.datatable.column.missing.update.parse", "Column " + name + " does not exist.", name); }
+        if (!mapColumnNameDefinition.containsKey(name)) {
+            throw new PlatformDataIntegrityException("error.msg.datatable.column.missing.update.parse",
+                    "Column " + name + " does not exist.", name);
+        }
         final String type = mapColumnNameDefinition.get(name).getColumnType();
         if (length == null && type.toLowerCase().equals("varchar")) {
             length = mapColumnNameDefinition.get(name).getColumnLength().intValue();
@@ -749,7 +757,7 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
         try {
             codeId = this.jdbcTemplate.queryForObject(checkColumnCodeMapping.toString(), Integer.class);
         } catch (final EmptyResultDataAccessException e) {
-            logger.info(e.getMessage());
+            LOG.info("Error occured.", e);
         }
         return ObjectUtils.defaultIfNull(codeId, 0);
     }
@@ -757,12 +765,12 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
     private void parseDatatableColumnForAdd(final JsonObject column, StringBuilder sqlBuilder, final String dataTableNameAlias,
             final StringBuilder constrainBuilder, final Map<String, Long> codeMappings, final boolean isConstraintApproach) {
 
-        String name = (column.has("name")) ? column.get("name").getAsString() : null;
-        final String type = (column.has("type")) ? column.get("type").getAsString().toLowerCase() : null;
-        final Integer length = (column.has("length")) ? column.get("length").getAsInt() : null;
-        final Boolean mandatory = (column.has("mandatory")) ? column.get("mandatory").getAsBoolean() : false;
-        final String after = (column.has("after")) ? column.get("after").getAsString() : null;
-        final String code = (column.has("code")) ? column.get("code").getAsString() : null;
+        String name = column.has("name") ? column.get("name").getAsString() : null;
+        final String type = column.has("type") ? column.get("type").getAsString().toLowerCase() : null;
+        final Integer length = column.has("length") ? column.get("length").getAsInt() : null;
+        final Boolean mandatory = column.has("mandatory") ? column.get("mandatory").getAsBoolean() : false;
+        final String after = column.has("after") ? column.get("after").getAsString() : null;
+        final String code = column.has("code") ? column.get("code").getAsString() : null;
 
         if (StringUtils.isNotBlank(code)) {
             if (isConstraintApproach) {
@@ -801,8 +809,8 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
     private void parseDatatableColumnForDrop(final JsonObject column, StringBuilder sqlBuilder, final String datatableName,
             final StringBuilder constrainBuilder, final List<String> codeMappings) {
         final String datatableAlias = datatableName.toLowerCase().replaceAll("\\s", "_");
-        final String name = (column.has("name")) ? column.get("name").getAsString() : null;
-        //sqlBuilder = sqlBuilder.append(", DROP COLUMN `" + name + "`");
+        final String name = column.has("name") ? column.get("name").getAsString() : null;
+        // sqlBuilder = sqlBuilder.append(", DROP COLUMN `" + name + "`");
         final StringBuilder findFKSql = new StringBuilder();
         findFKSql.append("SELECT count(*)").append("FROM information_schema.TABLE_CONSTRAINTS i")
                 .append(" WHERE i.CONSTRAINT_TYPE = 'FOREIGN KEY'").append(" AND i.TABLE_SCHEMA = DATABASE()")
@@ -842,8 +850,8 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
     }
 
     /**
-     * Update data table, set column value to empty string where current value
-     * is NULL. Run update SQL only if the "mandatory" property is set to true
+     * Update data table, set column value to empty string where current value is NULL. Run update SQL only if the
+     * "mandatory" property is set to true
      *
      * @param datatableName
      *            Name of data table
@@ -853,9 +861,9 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
      **/
     private void removeNullValuesFromStringColumn(final String datatableName, final JsonObject column,
             final Map<String, ResultsetColumnHeaderData> mapColumnNameDefinition) {
-        final Boolean mandatory = (column.has("mandatory")) ? column.get("mandatory").getAsBoolean() : false;
-        final String name = (column.has("name")) ? column.get("name").getAsString() : "";
-        final String type = (mapColumnNameDefinition.containsKey(name)) ? mapColumnNameDefinition.get(name).getColumnType() : "";
+        final Boolean mandatory = column.has("mandatory") ? column.get("mandatory").getAsBoolean() : false;
+        final String name = column.has("name") ? column.get("name").getAsString() : "";
+        final String type = mapColumnNameDefinition.containsKey(name) ? mapColumnNameDefinition.get(name).getColumnType() : "";
 
         if (StringUtils.isNotEmpty(type)) {
             if (mandatory && stringDataTypes.contains(type.toLowerCase())) {
@@ -906,14 +914,14 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
                     if (mapColumnNameDefinition.containsKey("id")) {
                         sqlBuilder = sqlBuilder.append("ALTER TABLE `" + datatableName + "` ").append("DROP KEY `fk_" + oldFKName + "`,")
                                 .append("DROP FOREIGN KEY `fk_" + oldConstraintName + "`,")
-                                .append("CHANGE COLUMN `" + oldFKName + "` `" + newFKName + "` BIGINT(20) NOT NULL,")
+                                .append("CHANGE COLUMN `" + oldFKName + "` `" + newFKName + "` BIGINT NOT NULL,")
                                 .append("ADD KEY `fk_" + newFKName + "` (`" + newFKName + "`),")
                                 .append("ADD CONSTRAINT `fk_" + newConstraintName + "` ").append("FOREIGN KEY (`" + newFKName + "`) ")
                                 .append("REFERENCES `" + actualAppTableName + "` (`id`)");
                     } else {
                         sqlBuilder = sqlBuilder.append("ALTER TABLE `" + datatableName + "` ")
                                 .append("DROP FOREIGN KEY `fk_" + oldConstraintName + "`,")
-                                .append("CHANGE COLUMN `" + oldFKName + "` `" + newFKName + "` BIGINT(20) NOT NULL,")
+                                .append("CHANGE COLUMN `" + oldFKName + "` `" + newFKName + "` BIGINT NOT NULL,")
                                 .append("ADD CONSTRAINT `fk_" + newConstraintName + "` ").append("FOREIGN KEY (`" + newFKName + "`) ")
                                 .append("REFERENCES `" + actualAppTableName + "` (`id`)");
                     }
@@ -925,10 +933,12 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
                 }
             }
 
-            if (changeColumns == null && addColumns == null && dropColumns == null) { return; }
+            if (changeColumns == null && addColumns == null && dropColumns == null) {
+                return;
+            }
 
             if (dropColumns != null) {
-                if(rowCount>0){
+                if (rowCount > 0) {
                     throw new GeneralPlatformDomainRuleException("error.msg.non.empty.datatable.column.cannot.be.deleted",
                             "Non-empty datatable columns can not be deleted.");
                 }
@@ -955,7 +965,7 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
                 final Map<String, Long> codeMappings = new HashMap<>();
                 for (final JsonElement column : addColumns) {
                     JsonObject columnAsJson = column.getAsJsonObject();
-                    if(rowCount>0 && columnAsJson.has("mandatory") && columnAsJson.get("mandatory").getAsBoolean()){
+                    if (rowCount > 0 && columnAsJson.has("mandatory") && columnAsJson.get("mandatory").getAsBoolean()) {
                         throw new GeneralPlatformDomainRuleException("error.msg.non.empty.datatable.mandatory.column.cannot.be.added",
                                 "Non empty datatable mandatory columns can not be added.");
                     }
@@ -997,21 +1007,23 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
                     deleteColumnCodeMapping(removeMappings);
                     registerColumnCodeMapping(codeMappings);
                 } catch (final Exception e) {
-                    if (e.getMessage().contains("Error on rename")) { throw new PlatformServiceUnavailableException(
-                            "error.msg.datatable.column.update.not.allowed", "One of the column name modification not allowed"); }
+                    if (e.getMessage().contains("Error on rename")) {
+                        throw new PlatformServiceUnavailableException("error.msg.datatable.column.update.not.allowed",
+                                "One of the column name modification not allowed", e);
+                    }
                     // handle all other exceptions in here
 
                     // check if exception message contains the
                     // "invalid use of null value" SQL exception message
                     // throw a 503 HTTP error -
                     // PlatformServiceUnavailableException
-                    if (e.getMessage().toLowerCase()
-                            .contains("invalid use of null value")) { throw new PlatformServiceUnavailableException(
-                                    "error.msg.datatable.column.update.not.allowed",
-                                    "One of the data table columns contains null values"); }
+                    if (e.getMessage().toLowerCase().contains("invalid use of null value")) {
+                        throw new PlatformServiceUnavailableException("error.msg.datatable.column.update.not.allowed",
+                                "One of the data table columns contains null values", e);
+                    }
                 }
             }
-        } catch (final DataIntegrityViolationException e) {
+        } catch (final JpaSystemException | DataIntegrityViolationException e) {
             final Throwable realCause = e.getCause();
             final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
             final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource("datatable");
@@ -1025,9 +1037,9 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             }
 
             throwExceptionIfValidationWarningsExist(dataValidationErrors);
-        }catch (final PersistenceException ee) {
-            Throwable realCause = ExceptionUtils.getRootCause(ee.getCause()) ;
-                final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
+        } catch (final PersistenceException ee) {
+            Throwable realCause = ExceptionUtils.getRootCause(ee.getCause());
+            final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
             final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource("datatable");
             if (realCause.getMessage().toLowerCase().contains("duplicate column name")) {
                 baseDataValidator.reset().parameter("name").failWithCode("duplicate.column.name");
@@ -1040,7 +1052,7 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             }
 
             throwExceptionIfValidationWarningsExist(dataValidationErrors);
-       }
+        }
     }
 
     @Transactional
@@ -1049,7 +1061,9 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
 
         try {
             this.context.authenticatedUser();
-            if (!isRegisteredDataTable(datatableName)) { throw new DatatableNotFoundException(datatableName); }
+            if (!isRegisteredDataTable(datatableName)) {
+                throw new DatatableNotFoundException(datatableName);
+            }
             validateDatatableName(datatableName);
             assertDataTableEmpty(datatableName);
             deregisterDatatable(datatableName);
@@ -1065,7 +1079,7 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             final String sql = "DROP TABLE `" + datatableName + "`";
             sqlArray[0] = sql;
             this.jdbcTemplate.batchUpdate(sqlArray);
-        } catch (final DataIntegrityViolationException e) {
+        } catch (final JpaSystemException | DataIntegrityViolationException e) {
             final Throwable realCause = e.getCause();
             final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
             final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource("datatable");
@@ -1079,11 +1093,13 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
 
     private void assertDataTableEmpty(final String datatableName) {
         final int rowCount = getRowCount(datatableName);
-        if (rowCount != 0) { throw new GeneralPlatformDomainRuleException("error.msg.non.empty.datatable.cannot.be.deleted",
-                "Non-empty datatable cannot be deleted."); }
+        if (rowCount != 0) {
+            throw new GeneralPlatformDomainRuleException("error.msg.non.empty.datatable.cannot.be.deleted",
+                    "Non-empty datatable cannot be deleted.");
+        }
     }
 
-    private int getRowCount(final String datatableName){
+    private int getRowCount(final String datatableName) {
         final String sql = "select count(*) from `" + datatableName + "`";
         return this.jdbcTemplate.queryForObject(sql, Integer.class);
     }
@@ -1112,10 +1128,14 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
 
         final GenericResultsetData grs = retrieveDataTableGenericResultSetForUpdate(appTable, dataTableName, appTableId, datatableId);
 
-        if (grs.hasNoEntries()) { throw new DatatableNotFoundException(dataTableName, appTableId); }
+        if (grs.hasNoEntries()) {
+            throw new DatatableNotFoundException(dataTableName, appTableId);
+        }
 
-        if (grs.hasMoreThanOneEntry()) { throw new PlatformDataIntegrityException("error.msg.attempting.multiple.update",
-                "Application table: " + dataTableName + " Foreign key id: " + appTableId); }
+        if (grs.hasMoreThanOneEntry()) {
+            throw new PlatformDataIntegrityException("error.msg.attempting.multiple.update",
+                    "Application table: " + dataTableName + " Foreign key id: " + appTableId);
+        }
 
         final Type typeOfMap = new TypeToken<Map<String, String>>() {}.getType();
         final Map<String, String> dataParams = this.fromJsonHelper.extractDataMap(typeOfMap, command.json());
@@ -1133,13 +1153,13 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
                 pkValue = datatableId;
             }
             final String sql = getUpdateSql(grs.getColumnHeaders(), dataTableName, pkName, pkValue, changes);
-            logger.info("Update sql: " + sql);
+            LOG.info("Update sql: {}", sql);
             if (StringUtils.isNotBlank(sql)) {
                 this.jdbcTemplate.update(sql);
                 changes.put("locale", dataParams.get("locale"));
                 changes.put("dateFormat", "yyyy-MM-dd");
             } else {
-                logger.info("No Changes");
+                LOG.info("No Changes");
             }
         }
 
@@ -1158,13 +1178,17 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
     public CommandProcessingResult deleteDatatableEntries(final String dataTableName, final Long appTableId) {
 
         validateDatatableName(dataTableName);
-        if (isDatatableAttachedToEntityDatatableCheck(dataTableName)) { throw new DatatableEntryRequiredException(dataTableName, appTableId); }
+        if (isDatatableAttachedToEntityDatatableCheck(dataTableName)) {
+            throw new DatatableEntryRequiredException(dataTableName, appTableId);
+        }
         final String appTable = queryForApplicationTableName(dataTableName);
         final CommandProcessingResult commandProcessingResult = checkMainResourceExistsWithinScope(appTable, appTableId);
         final String deleteOneToOneEntrySql = getDeleteEntriesSql(dataTableName, getFKField(appTable), appTableId);
 
         final int rowsDeleted = this.jdbcTemplate.update(deleteOneToOneEntrySql);
-        if (rowsDeleted < 1) { throw new DatatableNotFoundException(dataTableName, appTableId); }
+        if (rowsDeleted < 1) {
+            throw new DatatableNotFoundException(dataTableName, appTableId);
+        }
 
         return commandProcessingResult;
     }
@@ -1173,7 +1197,9 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
     @Override
     public CommandProcessingResult deleteDatatableEntry(final String dataTableName, final Long appTableId, final Long datatableId) {
         validateDatatableName(dataTableName);
-        if (isDatatableAttachedToEntityDatatableCheck(dataTableName)) { throw new DatatableEntryRequiredException(dataTableName, appTableId); }
+        if (isDatatableAttachedToEntityDatatableCheck(dataTableName)) {
+            throw new DatatableEntryRequiredException(dataTableName, appTableId);
+        }
         final String appTable = queryForApplicationTableName(dataTableName);
         final CommandProcessingResult commandProcessingResult = checkMainResourceExistsWithinScope(appTable, appTableId);
 
@@ -1240,10 +1266,12 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
     private CommandProcessingResult checkMainResourceExistsWithinScope(final String appTable, final Long appTableId) {
 
         final String sql = dataScopedSQL(appTable, appTableId);
-        logger.info("data scoped sql: " + sql);
+        LOG.info("data scoped sql: {}", sql);
         final SqlRowSet rs = this.jdbcTemplate.queryForRowSet(sql);
 
-        if (!rs.next()) { throw new DatatableNotFoundException(appTable, appTableId); }
+        if (!rs.next()) {
+            throw new DatatableNotFoundException(appTable, appTableId);
+        }
 
         final Long officeId = getLongSqlRowSet(rs, "officeId");
         final Long groupId = getLongSqlRowSet(rs, "groupId");
@@ -1252,7 +1280,9 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
         final Long LoanId = getLongSqlRowSet(rs, "loanId");
         final Long entityId = getLongSqlRowSet(rs, "entityId");
 
-        if (rs.next()) { throw new DatatableSystemErrorException("System Error: More than one row returned from data scoping query"); }
+        if (rs.next()) {
+            throw new DatatableSystemErrorException("System Error: More than one row returned from data scoping query");
+        }
 
         return new CommandProcessingResultBuilder() //
                 .withOfficeId(officeId) //
@@ -1273,18 +1303,15 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
 
     private String dataScopedSQL(final String appTable, final Long appTableId) {
         /*
-         * unfortunately have to, one way or another, be able to restrict data
-         * to the users office hierarchy. Here, a few key tables are done. But
-         * if additional fields are needed on other tables the same pattern
-         * applies
+         * unfortunately have to, one way or another, be able to restrict data to the users office hierarchy. Here, a
+         * few key tables are done. But if additional fields are needed on other tables the same pattern applies
          */
 
         final AppUser currentUser = this.context.authenticatedUser();
         String scopedSQL = null;
         /*
-         * m_loan and m_savings_account are connected to an m_office thru either
-         * an m_client or an m_group If both it means it relates to an m_client
-         * that is in a group (still an m_client account)
+         * m_loan and m_savings_account are connected to an m_office thru either an m_client or an m_group If both it
+         * means it relates to an m_client that is in a group (still an m_client account)
          */
         if (appTable.equalsIgnoreCase("m_loan")) {
             scopedSQL = "select  distinctrow x.* from ("
@@ -1324,8 +1351,10 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
                     + appTable + " as p WHERE p.id = " + appTableId;
         }
 
-        if (scopedSQL == null) { throw new PlatformDataIntegrityException("error.msg.invalid.dataScopeCriteria",
-                "Application Table: " + appTable + " not catered for in data Scoping"); }
+        if (scopedSQL == null) {
+            throw new PlatformDataIntegrityException("error.msg.invalid.dataScopeCriteria",
+                    "Application Table: " + appTable + " not catered for in data Scoping");
+        }
 
         return scopedSQL;
 
@@ -1333,21 +1362,39 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
 
     private void validateAppTable(final String appTable) {
 
-        if (appTable.equalsIgnoreCase("m_loan")) { return; }
-        if (appTable.equalsIgnoreCase("m_savings_account")) { return; }
-        if (appTable.equalsIgnoreCase("m_client")) { return; }
-        if (appTable.equalsIgnoreCase("m_group")) { return; }
-        if (appTable.equalsIgnoreCase("m_center")) { return; }
-        if (appTable.equalsIgnoreCase("m_office")) { return; }
-        if (appTable.equalsIgnoreCase("m_product_loan")) { return; }
-        if (appTable.equalsIgnoreCase("m_savings_product")) { return; }
+        if (appTable.equalsIgnoreCase("m_loan")) {
+            return;
+        }
+        if (appTable.equalsIgnoreCase("m_savings_account")) {
+            return;
+        }
+        if (appTable.equalsIgnoreCase("m_client")) {
+            return;
+        }
+        if (appTable.equalsIgnoreCase("m_group")) {
+            return;
+        }
+        if (appTable.equalsIgnoreCase("m_center")) {
+            return;
+        }
+        if (appTable.equalsIgnoreCase("m_office")) {
+            return;
+        }
+        if (appTable.equalsIgnoreCase("m_product_loan")) {
+            return;
+        }
+        if (appTable.equalsIgnoreCase("m_savings_product")) {
+            return;
+        }
 
         throw new PlatformDataIntegrityException("error.msg.invalid.application.table", "Invalid Application Table: " + appTable, "name",
                 appTable);
     }
 
     private String mapToActualAppTable(final String appTable) {
-        if (appTable.equalsIgnoreCase("m_center")) { return "m_group"; }
+        if (appTable.equalsIgnoreCase("m_center")) {
+            return "m_group";
+        }
         return appTable;
     }
 
@@ -1432,14 +1479,13 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
         addSql = "insert into `" + datatable + "` (`" + fkName + "` " + insertColumns + ")" + " select " + appTableId + " as id"
                 + selectColumns;
 
-        logger.info(addSql);
+        LOG.info("{}", addSql);
 
         return addSql;
     }
 
     /**
-     * This method is used special for ppi cases Where the score need to be
-     * computed
+     * This method is used special for ppi cases Where the score need to be computed
      *
      * @param columnHeaders
      * @param datatable
@@ -1483,7 +1529,7 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
                 + " as id" + selectColumns + " , ( SELECT SUM( code_score ) FROM m_code_value WHERE m_code_value.id IN (" + scoresId
                 + " ) ) as score";
 
-        logger.info(vaddSql);
+        LOG.info("{}", vaddSql);
 
         return vaddSql;
     }
@@ -1498,7 +1544,9 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
         // completeness but its okay to take this risk with additional fields
         // data
 
-        if (changedColumns.size() == 0) { return null; }
+        if (changedColumns.size() == 0) {
+            return null;
+        }
 
         String pValue = null;
         String pValueWrite = "";
@@ -1562,7 +1610,9 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             if (key.equals(grs.getColumnHeaders().get(i).getColumnName())) {
                 columnValue = columnValues.get(i);
 
-                if (notTheSame(columnValue, keyValue, colType)) { return true; }
+                if (notTheSame(columnValue, keyValue, colType)) {
+                    return true;
+                }
                 return false;
             }
         }
@@ -1576,7 +1626,7 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
         final String dateFormat = queryParams.get("dateFormat");
         Locale clientApplicationLocale = null;
         final String localeQueryParam = queryParams.get("locale");
-        if (!(StringUtils.isBlank(localeQueryParam))) {
+        if (!StringUtils.isBlank(localeQueryParam)) {
             clientApplicationLocale = new Locale(queryParams.get("locale"));
         }
 
@@ -1593,8 +1643,7 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
             // ignores id and foreign key fields
             // also ignores locale and dateformat fields that are used for
             // validating numeric and date data
-            if (!((key.equalsIgnoreCase("id")) || (key.equalsIgnoreCase(keyFieldName)) || (key.equals("locale"))
-                    || (key.equals("dateFormat")))) {
+            if (!(key.equalsIgnoreCase("id") || key.equalsIgnoreCase(keyFieldName) || key.equals("locale") || key.equals("dateFormat"))) {
                 notFound = true;
                 // matches incoming fields with and without underscores (spaces
                 // and underscores considered the same)
@@ -1611,7 +1660,9 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
                     }
 
                 }
-                if (notFound) { throw new PlatformDataIntegrityException("error.msg.column.not.found", "Column: " + key + " Not Found"); }
+                if (notFound) {
+                    throw new PlatformDataIntegrityException("error.msg.column.not.found", "Column: " + key + " Not Found");
+                }
             }
         }
         return affectedColumns;
@@ -1747,20 +1798,28 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
     }
 
     private boolean notTheSame(final String currValue, final String pValue, final String colType) {
-        if (StringUtils.isEmpty(currValue) && StringUtils.isEmpty(pValue)) { return false; }
+        if (StringUtils.isEmpty(currValue) && StringUtils.isEmpty(pValue)) {
+            return false;
+        }
 
-        if (StringUtils.isEmpty(currValue)) { return true; }
+        if (StringUtils.isEmpty(currValue)) {
+            return true;
+        }
 
-        if (StringUtils.isEmpty(pValue)) { return true; }
+        if (StringUtils.isEmpty(pValue)) {
+            return true;
+        }
 
         if ("DECIMAL".equalsIgnoreCase(colType)) {
-            final BigDecimal currentDecimal = BigDecimal.valueOf(Double.valueOf(currValue));
-            final BigDecimal newDecimal = BigDecimal.valueOf(Double.valueOf(pValue));
+            final BigDecimal currentDecimal = BigDecimal.valueOf(Double.parseDouble(currValue));
+            final BigDecimal newDecimal = BigDecimal.valueOf(Double.parseDouble(pValue));
 
             return currentDecimal.compareTo(newDecimal) != 0;
         }
 
-        if (currValue.equals(pValue)) { return false; }
+        if (currValue.equals(pValue)) {
+            return false;
+        }
 
         return true;
     }
@@ -1780,7 +1839,7 @@ public class ReadWriteNonCoreDataServiceImpl implements ReadWriteNonCoreDataServ
         builder.append(" JOIN m_entity_datatable_check edc ON edc.`x_registered_table_name` = xrt.`registered_table_name`");
         builder.append(" WHERE edc.`x_registered_table_name` = '" + datatableName + "'");
         final Long count = this.jdbcTemplate.queryForObject(builder.toString(), Long.class);
-        return (count > 0) ? true : false;
+        return count > 0 ? true : false;
     }
 
 }
