@@ -20,6 +20,9 @@ package org.apache.fineract.portfolio.calendar.domain;
 
 import static org.apache.fineract.portfolio.calendar.CalendarConstants.CALENDAR_RESOURCE_NAME;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.temporal.ChronoField;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashSet;
@@ -35,25 +38,22 @@ import javax.persistence.OneToMany;
 import javax.persistence.Table;
 import javax.persistence.Temporal;
 import javax.persistence.TemporalType;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.fineract.infrastructure.core.api.JsonCommand;
 import org.apache.fineract.infrastructure.core.data.ApiParameterError;
 import org.apache.fineract.infrastructure.core.data.DataValidatorBuilder;
 import org.apache.fineract.infrastructure.core.domain.AbstractAuditableCustom;
 import org.apache.fineract.infrastructure.core.exception.PlatformApiDataValidationException;
 import org.apache.fineract.infrastructure.core.service.DateUtils;
-import org.apache.fineract.portfolio.calendar.CalendarConstants.CALENDAR_SUPPORTED_PARAMETERS;
+import org.apache.fineract.portfolio.calendar.CalendarConstants.CalendarSupportedParameters;
 import org.apache.fineract.portfolio.calendar.exception.CalendarDateException;
 import org.apache.fineract.portfolio.calendar.exception.CalendarParameterUpdateNotSupportedException;
 import org.apache.fineract.portfolio.calendar.service.CalendarUtils;
 import org.apache.fineract.portfolio.common.domain.NthDayType;
-import org.apache.fineract.useradministration.domain.AppUser;
-import org.joda.time.LocalDate;
-import org.joda.time.LocalDateTime;
 
 @Entity
 @Table(name = "m_calendar")
-public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
+public class Calendar extends AbstractAuditableCustom {
 
     @Column(name = "title", length = 50, nullable = false)
     private String title;
@@ -93,7 +93,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
     @Column(name = "second_reminder", nullable = true)
     private Integer secondReminder;
 
-    @Column(name="meeting_time",nullable=true)
+    @Column(name = "meeting_time", nullable = true)
     @Temporal(TemporalType.TIME)
     private Date meetingtime;
 
@@ -105,18 +105,20 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
 
     }
 
-    public Calendar(final String title, final String description, final String location, final LocalDate startDate,
-            final LocalDate endDate, final Integer duration, final Integer typeId, final boolean repeating, final String recurrence,
-            final Integer remindById, final Integer firstReminder, final Integer secondReminder,final Date meetingtime) {
+    public Calendar(final String title, final String description, final String location, final LocalDate startDate, final LocalDate endDate,
+            final Integer duration, final Integer typeId, final boolean repeating, final String recurrence, final Integer remindById,
+            final Integer firstReminder, final Integer secondReminder, final Date meetingtime) {
 
         final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
         final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource(CALENDAR_RESOURCE_NAME);
 
         final CalendarType calendarType = CalendarType.fromInt(typeId);
         if (calendarType.isCollection() && !repeating) {
-            baseDataValidator.reset().parameter(CALENDAR_SUPPORTED_PARAMETERS.REPEATING.getValue())
+            baseDataValidator.reset().parameter(CalendarSupportedParameters.REPEATING.getValue())
                     .failWithCodeNoParameterAddedToErrorCode("must.repeat.for.collection.calendar");
-            if (!dataValidationErrors.isEmpty()) { throw new PlatformApiDataValidationException(dataValidationErrors); }
+            if (!dataValidationErrors.isEmpty()) {
+                throw new PlatformApiDataValidationException(dataValidationErrors);
+            }
         }
 
         this.title = StringUtils.defaultIfEmpty(title, null);
@@ -124,13 +126,13 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
         this.location = StringUtils.defaultIfEmpty(location, null);
 
         if (null != startDate) {
-            this.startDate = startDate.toDateTimeAtStartOfDay().toDate();
+            this.startDate = Date.from(startDate.atStartOfDay(DateUtils.getDateTimeZoneOfTenant()).toInstant());
         } else {
             this.startDate = null;
         }
 
         if (null != endDate) {
-            this.endDate = endDate.toDateTimeAtStartOfDay().toDate();
+            this.endDate = Date.from(endDate.atStartOfDay(DateUtils.getDateTimeZoneOfTenant()).toInstant());
         } else {
             this.endDate = null;
         }
@@ -142,7 +144,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
         this.remindById = remindById;
         this.firstReminder = firstReminder;
         this.secondReminder = secondReminder;
-        this.meetingtime=meetingtime;
+        this.meetingtime = meetingtime;
     }
 
     public static Calendar createRepeatingCalendar(final String title, final LocalDate startDate, final Integer typeId,
@@ -162,9 +164,9 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
         final Integer remindById = null;
         final Integer firstReminder = null;
         final Integer secondReminder = null;
-        final Date meetingtime=null;
+        final Date meetingtime = null;
         return new Calendar(title, description, location, startDate, endDate, duration, typeId, repeating, recurrence, remindById,
-                firstReminder, secondReminder,meetingtime);
+                firstReminder, secondReminder, meetingtime);
     }
 
     public static Calendar fromJson(final JsonCommand command) {
@@ -172,28 +174,27 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
         // final Long entityId = command.getSupportedEntityId();
         // final Integer entityTypeId =
         // CalendarEntityType.valueOf(command.getSupportedEntityType().toUpperCase()).getValue();
-        Date meetingtime=null;
-        final String title = command.stringValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.TITLE.getValue());
-        final String description = command.stringValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.DESCRIPTION.getValue());
-        final String location = command.stringValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.LOCATION.getValue());
-        final LocalDate startDate = command.localDateValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.START_DATE.getValue());
-        final LocalDate endDate = command.localDateValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.END_DATE.getValue());
-        final Integer duration = command.integerValueSansLocaleOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.DURATION.getValue());
-        final Integer typeId = command.integerValueSansLocaleOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.TYPE_ID.getValue());
-        final boolean repeating = command.booleanPrimitiveValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.REPEATING.getValue());
-        final Integer remindById = command.integerValueSansLocaleOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.REMIND_BY_ID.getValue());
-        final Integer firstReminder = command.integerValueSansLocaleOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.FIRST_REMINDER
-                .getValue());
-        final Integer secondReminder = command.integerValueSansLocaleOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.SECOND_REMINDER
-                .getValue());
-       final LocalDateTime time= command.localTimeValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.MEETING_TIME.getValue());
-       if(time!=null){
-        meetingtime=time.toDate();
-       }
+        Date meetingtime = null;
+        final String title = command.stringValueOfParameterNamed(CalendarSupportedParameters.TITLE.getValue());
+        final String description = command.stringValueOfParameterNamed(CalendarSupportedParameters.DESCRIPTION.getValue());
+        final String location = command.stringValueOfParameterNamed(CalendarSupportedParameters.LOCATION.getValue());
+        final LocalDate startDate = command.localDateValueOfParameterNamed(CalendarSupportedParameters.START_DATE.getValue());
+        final LocalDate endDate = command.localDateValueOfParameterNamed(CalendarSupportedParameters.END_DATE.getValue());
+        final Integer duration = command.integerValueSansLocaleOfParameterNamed(CalendarSupportedParameters.DURATION.getValue());
+        final Integer typeId = command.integerValueSansLocaleOfParameterNamed(CalendarSupportedParameters.TYPE_ID.getValue());
+        final boolean repeating = command.booleanPrimitiveValueOfParameterNamed(CalendarSupportedParameters.REPEATING.getValue());
+        final Integer remindById = command.integerValueSansLocaleOfParameterNamed(CalendarSupportedParameters.REMIND_BY_ID.getValue());
+        final Integer firstReminder = command.integerValueSansLocaleOfParameterNamed(CalendarSupportedParameters.FIRST_REMINDER.getValue());
+        final Integer secondReminder = command
+                .integerValueSansLocaleOfParameterNamed(CalendarSupportedParameters.SECOND_REMINDER.getValue());
+        final LocalDateTime time = command.localTimeValueOfParameterNamed(CalendarSupportedParameters.MEETING_TIME.getValue());
+        if (time != null) {
+            meetingtime = Date.from(time.atZone(DateUtils.getDateTimeZoneOfTenant()).toInstant());
+        }
         final String recurrence = Calendar.constructRecurrence(command, null);
 
         return new Calendar(title, description, location, startDate, endDate, duration, typeId, repeating, recurrence, remindById,
-                firstReminder, secondReminder,meetingtime);
+                firstReminder, secondReminder, meetingtime);
     }
 
     public Map<String, Object> updateStartDateAndDerivedFeilds(final LocalDate newMeetingStartDate) {
@@ -214,14 +215,13 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
                     getStartDateLocalDate());
         } else {
 
-            actualChanges.put(CALENDAR_SUPPORTED_PARAMETERS.START_DATE.getValue(), newMeetingStartDate.toString());
-            this.startDate = newMeetingStartDate.toDate();
+            actualChanges.put(CalendarSupportedParameters.START_DATE.getValue(), newMeetingStartDate.toString());
+            this.startDate = Date.from(newMeetingStartDate.atStartOfDay(DateUtils.getDateTimeZoneOfTenant()).toInstant());
 
             /*
-             * If meeting start date is changed then there is possibilities of
-             * recurring day may change, so derive the recurring day and update
-             * it if it is changed. For weekly type is weekday and for monthly
-             * type it is day of the month
+             * If meeting start date is changed then there is possibilities of recurring day may change, so derive the
+             * recurring day and update it if it is changed. For weekly type is weekday and for monthly type it is day
+             * of the month
              */
 
             CalendarFrequencyType calendarFrequencyType = CalendarUtils.getFrequency(this.recurrence);
@@ -233,7 +233,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
              */
 
             if (calendarFrequencyType.isWeekly()) {
-                repeatsOnDay = newMeetingStartDate.getDayOfWeek();
+                repeatsOnDay = newMeetingStartDate.get(ChronoField.DAY_OF_WEEK);
             } else if (calendarFrequencyType.isMonthly()) {
                 repeatsOnDay = newMeetingStartDate.getDayOfMonth();
             }
@@ -252,27 +252,27 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
 
         final Map<String, Object> actualChanges = new LinkedHashMap<>(9);
 
-        if (command.isChangeInStringParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.TITLE.getValue(), this.title)) {
-            final String newValue = command.stringValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.TITLE.getValue());
-            actualChanges.put(CALENDAR_SUPPORTED_PARAMETERS.TITLE.getValue(), newValue);
+        if (command.isChangeInStringParameterNamed(CalendarSupportedParameters.TITLE.getValue(), this.title)) {
+            final String newValue = command.stringValueOfParameterNamed(CalendarSupportedParameters.TITLE.getValue());
+            actualChanges.put(CalendarSupportedParameters.TITLE.getValue(), newValue);
             this.title = StringUtils.defaultIfEmpty(newValue, null);
         }
 
-        if (command.isChangeInStringParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.DESCRIPTION.getValue(), this.description)) {
-            final String newValue = command.stringValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.DESCRIPTION.getValue());
-            actualChanges.put(CALENDAR_SUPPORTED_PARAMETERS.DESCRIPTION.getValue(), newValue);
+        if (command.isChangeInStringParameterNamed(CalendarSupportedParameters.DESCRIPTION.getValue(), this.description)) {
+            final String newValue = command.stringValueOfParameterNamed(CalendarSupportedParameters.DESCRIPTION.getValue());
+            actualChanges.put(CalendarSupportedParameters.DESCRIPTION.getValue(), newValue);
             this.description = StringUtils.defaultIfEmpty(newValue, null);
         }
 
-        if (command.isChangeInStringParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.LOCATION.getValue(), this.location)) {
-            final String newValue = command.stringValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.LOCATION.getValue());
-            actualChanges.put(CALENDAR_SUPPORTED_PARAMETERS.LOCATION.getValue(), newValue);
+        if (command.isChangeInStringParameterNamed(CalendarSupportedParameters.LOCATION.getValue(), this.location)) {
+            final String newValue = command.stringValueOfParameterNamed(CalendarSupportedParameters.LOCATION.getValue());
+            actualChanges.put(CalendarSupportedParameters.LOCATION.getValue(), newValue);
             this.location = StringUtils.defaultIfEmpty(newValue, null);
         }
 
         final String dateFormatAsInput = command.dateFormat();
         final String localeAsInput = command.locale();
-        final String startDateParamName = CALENDAR_SUPPORTED_PARAMETERS.START_DATE.getValue();
+        final String startDateParamName = CalendarSupportedParameters.START_DATE.getValue();
         if (command.isChangeInLocalDateParameterNamed(startDateParamName, getStartDateLocalDate())) {
 
             final String valueAsInput = command.stringValueOfParameterNamed(startDateParamName);
@@ -292,11 +292,11 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
                 actualChanges.put(startDateParamName, valueAsInput);
                 actualChanges.put("dateFormat", dateFormatAsInput);
                 actualChanges.put("locale", localeAsInput);
-                this.startDate = newValue.toDate();
+                this.startDate = Date.from(newValue.atStartOfDay(DateUtils.getDateTimeZoneOfTenant()).toInstant());
             }
         }
 
-        final String endDateParamName = CALENDAR_SUPPORTED_PARAMETERS.END_DATE.getValue();
+        final String endDateParamName = CalendarSupportedParameters.END_DATE.getValue();
         if (command.isChangeInLocalDateParameterNamed(endDateParamName, getEndDateLocalDate())) {
             final String valueAsInput = command.stringValueOfParameterNamed(endDateParamName);
             actualChanges.put(endDateParamName, valueAsInput);
@@ -304,10 +304,10 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
             actualChanges.put("locale", localeAsInput);
 
             final LocalDate newValue = command.localDateValueOfParameterNamed(endDateParamName);
-            this.endDate = newValue.toDate();
+            this.endDate = Date.from(newValue.atStartOfDay(DateUtils.getDateTimeZoneOfTenant()).toInstant());
         }
 
-        final String durationParamName = CALENDAR_SUPPORTED_PARAMETERS.DURATION.getValue();
+        final String durationParamName = CalendarSupportedParameters.DURATION.getValue();
         if (command.isChangeInIntegerSansLocaleParameterNamed(durationParamName, this.duration)) {
             final Integer newValue = command.integerValueSansLocaleOfParameterNamed(durationParamName);
             actualChanges.put(durationParamName, newValue);
@@ -317,7 +317,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
         // Do not allow to change calendar type
         // TODO: AA Instead of throwing an exception, do not allow meeting
         // calendar type to update.
-        final String typeParamName = CALENDAR_SUPPORTED_PARAMETERS.TYPE_ID.getValue();
+        final String typeParamName = CalendarSupportedParameters.TYPE_ID.getValue();
         if (command.isChangeInIntegerSansLocaleParameterNamed(typeParamName, this.typeId)) {
             final Integer newValue = command.integerValueSansLocaleOfParameterNamed(typeParamName);
             final String defaultUserMessage = "Meeting calendar type update is not supported";
@@ -326,14 +326,12 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
 
             throw new CalendarParameterUpdateNotSupportedException("meeting.type", defaultUserMessage, newMeetingType, oldMeeingType);
             /*
-             * final Integer newValue =
-             * command.integerValueSansLocaleOfParameterNamed(typeParamName);
-             * actualChanges.put(typeParamName, newValue); this.typeId =
-             * newValue;
+             * final Integer newValue = command.integerValueSansLocaleOfParameterNamed(typeParamName);
+             * actualChanges.put(typeParamName, newValue); this.typeId = newValue;
              */
         }
 
-        final String repeatingParamName = CALENDAR_SUPPORTED_PARAMETERS.REPEATING.getValue();
+        final String repeatingParamName = CalendarSupportedParameters.REPEATING.getValue();
         if (command.isChangeInBooleanParameterNamed(repeatingParamName, this.repeating)) {
             final boolean newValue = command.booleanPrimitiveValueOfParameterNamed(repeatingParamName);
             actualChanges.put(repeatingParamName, newValue);
@@ -341,23 +339,27 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
         }
 
         // if repeating is false then update recurrence to NULL
-        if (!this.repeating) this.recurrence = null;
+        if (!this.repeating) {
+            this.recurrence = null;
+        }
 
         final List<ApiParameterError> dataValidationErrors = new ArrayList<>();
         final DataValidatorBuilder baseDataValidator = new DataValidatorBuilder(dataValidationErrors).resource(CALENDAR_RESOURCE_NAME);
 
         final CalendarType calendarType = CalendarType.fromInt(this.typeId);
         if (calendarType.isCollection() && !this.repeating) {
-            baseDataValidator.reset().parameter(CALENDAR_SUPPORTED_PARAMETERS.REPEATING.getValue())
+            baseDataValidator.reset().parameter(CalendarSupportedParameters.REPEATING.getValue())
                     .failWithCodeNoParameterAddedToErrorCode("must.repeat.for.collection.calendar");
-            if (!dataValidationErrors.isEmpty()) { throw new PlatformApiDataValidationException(dataValidationErrors); }
+            if (!dataValidationErrors.isEmpty()) {
+                throw new PlatformApiDataValidationException(dataValidationErrors);
+            }
         }
 
         final String newRecurrence = Calendar.constructRecurrence(command, this);
         if (!StringUtils.isBlank(this.recurrence) && !newRecurrence.equalsIgnoreCase(this.recurrence)) {
             /*
-             * If active entities like JLG loan or RD accounts are synced to the
-             * calendar then do not allow to change meeting frequency
+             * If active entities like JLG loan or RD accounts are synced to the calendar then do not allow to change
+             * meeting frequency
              */
 
             if (areActiveEntitiesSynced && !CalendarUtils.isFrequencySame(this.recurrence, newRecurrence)) {
@@ -366,8 +368,8 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
             }
 
             /*
-             * If active entities like JLG loan or RD accounts are synced to the
-             * calendar then do not allow to change meeting interval
+             * If active entities like JLG loan or RD accounts are synced to the calendar then do not allow to change
+             * meeting interval
              */
 
             if (areActiveEntitiesSynced && !CalendarUtils.isIntervalSame(this.recurrence, newRecurrence)) {
@@ -379,35 +381,35 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
             this.recurrence = StringUtils.defaultIfEmpty(newRecurrence, null);
         }
 
-        final String remindByParamName = CALENDAR_SUPPORTED_PARAMETERS.REMIND_BY_ID.getValue();
+        final String remindByParamName = CalendarSupportedParameters.REMIND_BY_ID.getValue();
         if (command.isChangeInIntegerSansLocaleParameterNamed(remindByParamName, this.remindById)) {
             final Integer newValue = command.integerValueSansLocaleOfParameterNamed(remindByParamName);
             actualChanges.put(remindByParamName, newValue);
             this.remindById = newValue;
         }
 
-        final String firstRemindarParamName = CALENDAR_SUPPORTED_PARAMETERS.FIRST_REMINDER.getValue();
+        final String firstRemindarParamName = CalendarSupportedParameters.FIRST_REMINDER.getValue();
         if (command.isChangeInIntegerSansLocaleParameterNamed(firstRemindarParamName, this.firstReminder)) {
             final Integer newValue = command.integerValueSansLocaleOfParameterNamed(firstRemindarParamName);
             actualChanges.put(firstRemindarParamName, newValue);
             this.firstReminder = newValue;
         }
 
-        final String secondRemindarParamName = CALENDAR_SUPPORTED_PARAMETERS.SECOND_REMINDER.getValue();
+        final String secondRemindarParamName = CalendarSupportedParameters.SECOND_REMINDER.getValue();
         if (command.isChangeInIntegerSansLocaleParameterNamed(secondRemindarParamName, this.secondReminder)) {
             final Integer newValue = command.integerValueSansLocaleOfParameterNamed(secondRemindarParamName);
             actualChanges.put(secondRemindarParamName, newValue);
             this.secondReminder = newValue;
         }
 
-        final String timeFormat = command.stringValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.Time_Format.getValue());
-        final String time = CALENDAR_SUPPORTED_PARAMETERS.MEETING_TIME.getValue();
-        if (command.isChangeInTimeParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.MEETING_TIME.getValue(), this.meetingtime,timeFormat)) {
-            final String newValue = command.stringValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.MEETING_TIME.getValue());
-            actualChanges.put(CALENDAR_SUPPORTED_PARAMETERS.MEETING_TIME.getValue(), newValue);
-            LocalDateTime timeInLocalDateTimeFormat=command.localTimeValueOfParameterNamed(time);
-            if(timeInLocalDateTimeFormat!=null){
-            this.meetingtime= timeInLocalDateTimeFormat.toDate();
+        final String timeFormat = command.stringValueOfParameterNamed(CalendarSupportedParameters.Time_Format.getValue());
+        final String time = CalendarSupportedParameters.MEETING_TIME.getValue();
+        if (command.isChangeInTimeParameterNamed(CalendarSupportedParameters.MEETING_TIME.getValue(), this.meetingtime, timeFormat)) {
+            final String newValue = command.stringValueOfParameterNamed(CalendarSupportedParameters.MEETING_TIME.getValue());
+            actualChanges.put(CalendarSupportedParameters.MEETING_TIME.getValue(), newValue);
+            LocalDateTime timeInLocalDateTimeFormat = command.localTimeValueOfParameterNamed(time);
+            if (timeInLocalDateTimeFormat != null) {
+                this.meetingtime = Date.from(timeInLocalDateTimeFormat.atZone(DateUtils.getDateTimeZoneOfTenant()).toInstant());
             }
 
         }
@@ -423,7 +425,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
         if (calendarStartDate != null && this.startDate != null) {
             if (!calendarStartDate.equals(this.getStartDateLocalDate())) {
                 actualChanges.put("startDate", calendarStartDate);
-                this.startDate = calendarStartDate.toDate();
+                this.startDate = Date.from(calendarStartDate.atStartOfDay(DateUtils.getDateTimeZoneOfTenant()).toInstant());
             }
         }
 
@@ -483,14 +485,14 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
         return this.secondReminder;
     }
 
-    public Date getMeetingTime(){
+    public Date getMeetingTime() {
         return this.meetingtime;
     }
 
     public LocalDate getStartDateLocalDate() {
         LocalDate startDateLocalDate = null;
         if (this.startDate != null) {
-            startDateLocalDate = LocalDate.fromDateFields(this.startDate);
+            startDateLocalDate = LocalDate.ofInstant(this.startDate.toInstant(), DateUtils.getDateTimeZoneOfTenant());
         }
         return startDateLocalDate;
     }
@@ -498,7 +500,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
     public LocalDate getEndDateLocalDate() {
         LocalDate endDateLocalDate = null;
         if (this.endDate != null) {
-            endDateLocalDate = LocalDate.fromDateFields(this.endDate);
+            endDateLocalDate = LocalDate.ofInstant(this.endDate.toInstant(), DateUtils.getDateTimeZoneOfTenant());
         }
         return endDateLocalDate;
     }
@@ -508,47 +510,59 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
     }
 
     public boolean isStartDateBefore(final LocalDate compareDate) {
-        if (this.startDate != null && compareDate != null && getStartDateLocalDate().isBefore(compareDate)) { return true; }
+        if (this.startDate != null && compareDate != null && getStartDateLocalDate().isBefore(compareDate)) {
+            return true;
+        }
         return false;
     }
 
     public boolean isStartDateBeforeOrEqual(final LocalDate compareDate) {
         if (this.startDate != null && compareDate != null) {
-            if (getStartDateLocalDate().isBefore(compareDate) || getStartDateLocalDate().equals(compareDate)) { return true; }
+            if (getStartDateLocalDate().isBefore(compareDate) || getStartDateLocalDate().equals(compareDate)) {
+                return true;
+            }
         }
         return false;
     }
 
     public boolean isStartDateAfter(final LocalDate compareDate) {
-        if (this.startDate != null && compareDate != null && getStartDateLocalDate().isAfter(compareDate)) { return true; }
+        if (this.startDate != null && compareDate != null && getStartDateLocalDate().isAfter(compareDate)) {
+            return true;
+        }
         return false;
     }
 
     public boolean isStartDateAfterOrEqual(final LocalDate compareDate) {
         if (this.startDate != null && compareDate != null) {
-            if (getStartDateLocalDate().isAfter(compareDate) || getStartDateLocalDate().isEqual(compareDate)) { return true; }
+            if (getStartDateLocalDate().isAfter(compareDate) || getStartDateLocalDate().isEqual(compareDate)) {
+                return true;
+            }
         }
         return false;
     }
 
     public boolean isEndDateAfterOrEqual(final LocalDate compareDate) {
         if (this.endDate != null && compareDate != null) {
-            if (getEndDateLocalDate().isAfter(compareDate) || getEndDateLocalDate().isEqual(compareDate)) { return true; }
+            if (getEndDateLocalDate().isAfter(compareDate) || getEndDateLocalDate().isEqual(compareDate)) {
+                return true;
+            }
         }
         return false;
     }
 
     public boolean isBetweenStartAndEndDate(final LocalDate compareDate) {
         if (isStartDateBeforeOrEqual(compareDate)) {
-            if (getEndDateLocalDate() == null || isEndDateAfterOrEqual(compareDate)) { return true; }
+            if (getEndDateLocalDate() == null || isEndDateAfterOrEqual(compareDate)) {
+                return true;
+            }
         }
         return false;
     }
 
     private static String constructRecurrence(final JsonCommand command, final Calendar calendar) {
         final boolean repeating;
-        if (command.parameterExists(CALENDAR_SUPPORTED_PARAMETERS.REPEATING.getValue())) {
-            repeating = command.booleanPrimitiveValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.REPEATING.getValue());
+        if (command.parameterExists(CalendarSupportedParameters.REPEATING.getValue())) {
+            repeating = command.booleanPrimitiveValueOfParameterNamed(CalendarSupportedParameters.REPEATING.getValue());
         } else if (calendar != null) {
             repeating = calendar.isRepeating();
         } else {
@@ -556,23 +570,23 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
         }
 
         if (repeating) {
-            final Integer frequency = command.integerValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.FREQUENCY.getValue());
+            final Integer frequency = command.integerValueOfParameterNamed(CalendarSupportedParameters.FREQUENCY.getValue());
             final CalendarFrequencyType frequencyType = CalendarFrequencyType.fromInt(frequency);
-            final Integer interval = command.integerValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.INTERVAL.getValue());
+            final Integer interval = command.integerValueOfParameterNamed(CalendarSupportedParameters.INTERVAL.getValue());
             Integer repeatsOnDay = null;
             if (frequencyType.isWeekly()) {
-                repeatsOnDay = command.integerValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.REPEATS_ON_DAY.getValue());
+                repeatsOnDay = command.integerValueOfParameterNamed(CalendarSupportedParameters.REPEATS_ON_DAY.getValue());
             }
             Integer repeatsOnNthDayOfMonth = null;
             if (frequencyType.isMonthly()) {
-                repeatsOnNthDayOfMonth = command.integerValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.REPEATS_ON_NTH_DAY_OF_MONTH
-                        .getValue());
+                repeatsOnNthDayOfMonth = command
+                        .integerValueOfParameterNamed(CalendarSupportedParameters.REPEATS_ON_NTH_DAY_OF_MONTH.getValue());
                 final NthDayType nthDay = NthDayType.fromInt(repeatsOnNthDayOfMonth);
-                repeatsOnDay = command.integerValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.REPEATS_ON_LAST_WEEKDAY_OF_MONTH
-                        .getValue());
+                repeatsOnDay = command
+                        .integerValueOfParameterNamed(CalendarSupportedParameters.REPEATS_ON_LAST_WEEKDAY_OF_MONTH.getValue());
                 if (nthDay.isOnDay()) {
-                    repeatsOnNthDayOfMonth = command.integerValueOfParameterNamed(CALENDAR_SUPPORTED_PARAMETERS.REPEATS_ON_DAY_OF_MONTH
-                            .getValue());
+                    repeatsOnNthDayOfMonth = command
+                            .integerValueOfParameterNamed(CalendarSupportedParameters.REPEATS_ON_DAY_OF_MONTH.getValue());
                     repeatsOnDay = null;
                 }
             }
@@ -582,8 +596,8 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
         return "";
     }
 
-    private static String constructRecurrence(final CalendarFrequencyType frequencyType, final Integer interval,
-            final Integer repeatsOnDay, final Integer repeatsOnNthDayOfMonth) {
+    private static String constructRecurrence(final CalendarFrequencyType frequencyType, final Integer interval, final Integer repeatsOnDay,
+            final Integer repeatsOnNthDayOfMonth) {
         final StringBuilder recurrenceBuilder = new StringBuilder(200);
 
         recurrenceBuilder.append("FREQ=");
@@ -607,7 +621,8 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
                     recurrenceBuilder.append(";BYMONTHDAY=");
                     recurrenceBuilder.append(repeatsOnNthDayOfMonth);
                 }
-            } else if (repeatsOnNthDayOfMonth != null && repeatsOnDay != null && !repeatsOnDay.equals(CalendarWeekDaysType.INVALID.getValue())) {
+            } else if (repeatsOnNthDayOfMonth != null && repeatsOnDay != null
+                    && !repeatsOnDay.equals(CalendarWeekDaysType.INVALID.getValue())) {
                 final NthDayType nthDay = NthDayType.fromInt(repeatsOnNthDayOfMonth);
                 if (!nthDay.isInvalid()) {
                     recurrenceBuilder.append(";BYSETPOS=");
@@ -625,13 +640,17 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
 
     public boolean isValidRecurringDate(final LocalDate compareDate, Boolean isSkipRepaymentOnFirstMonth, Integer numberOfDays) {
 
-        if (isBetweenStartAndEndDate(compareDate)) { return CalendarUtils.isValidRedurringDate(getRecurrence(), getStartDateLocalDate(),
-                compareDate, isSkipRepaymentOnFirstMonth, numberOfDays); }
+        if (isBetweenStartAndEndDate(compareDate)) {
+            return CalendarUtils.isValidRedurringDate(getRecurrence(), getStartDateLocalDate(), compareDate, isSkipRepaymentOnFirstMonth,
+                    numberOfDays);
+        }
 
         // validate with history details.
         for (CalendarHistory history : history()) {
-            if (history.isBetweenStartAndEndDate(compareDate)) { return CalendarUtils.isValidRedurringDate(history.getRecurrence(),
-                    history.getStartDateLocalDate(), compareDate, isSkipRepaymentOnFirstMonth, numberOfDays); }
+            if (history.isBetweenStartAndEndDate(compareDate)) {
+                return CalendarUtils.isValidRedurringDate(history.getRecurrence(), history.getStartDateLocalDate(), compareDate,
+                        isSkipRepaymentOnFirstMonth, numberOfDays);
+            }
         }
 
         return false;
@@ -640,12 +659,12 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
     public void updateStartAndEndDate(final LocalDate startDate, final LocalDate endDate) {
 
         final CalendarFrequencyType frequencyType = CalendarUtils.getFrequency(this.recurrence);
-        final Integer interval = new Integer(CalendarUtils.getInterval(this.recurrence));
-        final String newRecurrence = Calendar.constructRecurrence(frequencyType, interval, startDate.getDayOfWeek(), null);
+        final Integer interval = Integer.valueOf(CalendarUtils.getInterval(this.recurrence));
+        final String newRecurrence = Calendar.constructRecurrence(frequencyType, interval, startDate.get(ChronoField.DAY_OF_WEEK), null);
 
         this.recurrence = newRecurrence;
-        this.startDate = startDate.toDate();
-        this.endDate = endDate.toDate();
+        this.startDate = Date.from(startDate.atStartOfDay(DateUtils.getDateTimeZoneOfTenant()).toInstant());
+        this.endDate = Date.from(endDate.atStartOfDay(DateUtils.getDateTimeZoneOfTenant()).toInstant());
     }
 
     public Set<CalendarHistory> getCalendarHistory() {
