@@ -39,7 +39,11 @@ import org.apache.fineract.portfolio.loanproduct.domain.LoanProductValueConditio
 import org.apache.fineract.portfolio.loanproduct.domain.LoanRescheduleStrategyMethod;
 import org.apache.fineract.portfolio.loanproduct.domain.RecalculationFrequencyType;
 
-public class LoanEnumerations {
+public final class LoanEnumerations {
+
+    private LoanEnumerations() {
+
+    }
 
     public static final String LOAN_TERM_FREQUENCY_TYPE = "loanTermFrequencyType";
     public static final String TERM_FREQUENCY_TYPE = "termFrequencyType";
@@ -75,7 +79,9 @@ public class LoanEnumerations {
             return AccountEnumerations.loanType(id);
         } else if (typeName.equals(INTEREST_RECALCULATION_COMPOUNDING_TYPE)) {
             return interestRecalculationCompoundingType(id);
-        } else if (typeName.equals(RESCHEDULE_STRATEGY_TYPE)) { return rescheduleStrategyType(id); }
+        } else if (typeName.equals(RESCHEDULE_STRATEGY_TYPE)) {
+            return rescheduleStrategyType(id);
+        }
         return null;
     }
 
@@ -88,20 +94,20 @@ public class LoanEnumerations {
         EnumOptionData optionData = null;
         switch (type) {
             case DAYS:
-                optionData = new EnumOptionData(PeriodFrequencyType.DAYS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.DAYS.getCode(), "Days");
+                optionData = new EnumOptionData(PeriodFrequencyType.DAYS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.DAYS.getCode(), "Days");
             break;
             case WEEKS:
-                optionData = new EnumOptionData(PeriodFrequencyType.WEEKS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.WEEKS.getCode(), "Weeks");
+                optionData = new EnumOptionData(PeriodFrequencyType.WEEKS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.WEEKS.getCode(), "Weeks");
             break;
             case MONTHS:
-                optionData = new EnumOptionData(PeriodFrequencyType.MONTHS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.MONTHS.getCode(), "Months");
+                optionData = new EnumOptionData(PeriodFrequencyType.MONTHS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.MONTHS.getCode(), "Months");
             break;
             case YEARS:
-                optionData = new EnumOptionData(PeriodFrequencyType.YEARS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.YEARS.getCode(), "Years");
+                optionData = new EnumOptionData(PeriodFrequencyType.YEARS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.YEARS.getCode(), "Years");
             break;
             default:
                 optionData = new EnumOptionData(PeriodFrequencyType.INVALID.getValue().longValue(), PeriodFrequencyType.INVALID.getCode(),
@@ -120,20 +126,20 @@ public class LoanEnumerations {
         EnumOptionData optionData = null;
         switch (type) {
             case DAYS:
-                optionData = new EnumOptionData(PeriodFrequencyType.DAYS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.DAYS.getCode(), "Days");
+                optionData = new EnumOptionData(PeriodFrequencyType.DAYS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.DAYS.getCode(), "Days");
             break;
             case WEEKS:
-                optionData = new EnumOptionData(PeriodFrequencyType.WEEKS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.WEEKS.getCode(), "Weeks");
+                optionData = new EnumOptionData(PeriodFrequencyType.WEEKS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.WEEKS.getCode(), "Weeks");
             break;
             case MONTHS:
-                optionData = new EnumOptionData(PeriodFrequencyType.MONTHS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.MONTHS.getCode(), "Months");
+                optionData = new EnumOptionData(PeriodFrequencyType.MONTHS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.MONTHS.getCode(), "Months");
             break;
             case YEARS:
-                optionData = new EnumOptionData(PeriodFrequencyType.YEARS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.YEARS.getCode(), "Years");
+                optionData = new EnumOptionData(PeriodFrequencyType.YEARS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.YEARS.getCode(), "Years");
             break;
             default:
                 optionData = new EnumOptionData(PeriodFrequencyType.INVALID.getValue().longValue(), PeriodFrequencyType.INVALID.getCode(),
@@ -148,7 +154,9 @@ public class LoanEnumerations {
     }
 
     public static EnumOptionData repaymentFrequencyNthDayType(final Integer id) {
-        if (id == null) { return null; }
+        if (id == null) {
+            return null;
+        }
         return repaymentFrequencyNthDayType(NthDayType.fromInt(id));
     }
 
@@ -176,7 +184,7 @@ public class LoanEnumerations {
                 optionData = new EnumOptionData(nthDayValue, codePrefix + type.getCode(), "last");
             break;
             default:
-                optionData = new EnumOptionData(new Integer(0).longValue(), codePrefix + type.getCode(), "invalid");
+                optionData = new EnumOptionData(Integer.valueOf(0).longValue(), codePrefix + type.getCode(), "invalid");
             break;
         }
 
@@ -184,7 +192,9 @@ public class LoanEnumerations {
     }
 
     public static EnumOptionData repaymentFrequencyDayOfWeekType(final Integer id) {
-        if (id == null) { return null; }
+        if (id == null) {
+            return null;
+        }
         return repaymentFrequencyDayOfWeekType(DayOfWeekType.fromInt(id));
     }
 
@@ -200,20 +210,20 @@ public class LoanEnumerations {
         EnumOptionData optionData = null;
         switch (type) {
             case DAYS:
-                optionData = new EnumOptionData(PeriodFrequencyType.DAYS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.DAYS.getCode(), "Days");
+                optionData = new EnumOptionData(PeriodFrequencyType.DAYS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.DAYS.getCode(), "Days");
             break;
             case WEEKS:
-                optionData = new EnumOptionData(PeriodFrequencyType.WEEKS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.WEEKS.getCode(), "Weeks");
+                optionData = new EnumOptionData(PeriodFrequencyType.WEEKS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.WEEKS.getCode(), "Weeks");
             break;
             case MONTHS:
-                optionData = new EnumOptionData(PeriodFrequencyType.MONTHS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.MONTHS.getCode(), "Months");
+                optionData = new EnumOptionData(PeriodFrequencyType.MONTHS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.MONTHS.getCode(), "Months");
             break;
             case YEARS:
-                optionData = new EnumOptionData(PeriodFrequencyType.YEARS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.YEARS.getCode(), "Years");
+                optionData = new EnumOptionData(PeriodFrequencyType.YEARS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.YEARS.getCode(), "Years");
             break;
             default:
                 optionData = new EnumOptionData(PeriodFrequencyType.INVALID.getValue().longValue(), PeriodFrequencyType.INVALID.getCode(),
@@ -232,16 +242,16 @@ public class LoanEnumerations {
         EnumOptionData optionData = null;
         switch (type) {
             case MONTHS:
-                optionData = new EnumOptionData(PeriodFrequencyType.MONTHS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.MONTHS.getCode(), "Per month");
+                optionData = new EnumOptionData(PeriodFrequencyType.MONTHS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.MONTHS.getCode(), "Per month");
             break;
             case YEARS:
-                optionData = new EnumOptionData(PeriodFrequencyType.YEARS.getValue().longValue(), codePrefix
-                        + PeriodFrequencyType.YEARS.getCode(), "Per year");
+                optionData = new EnumOptionData(PeriodFrequencyType.YEARS.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.YEARS.getCode(), "Per year");
             break;
             case WHOLE_TERM:
-                 optionData = new EnumOptionData(PeriodFrequencyType.WHOLE_TERM.getValue().longValue(), codePrefix
-                         + PeriodFrequencyType.WHOLE_TERM.getCode(), "Whole term");
+                optionData = new EnumOptionData(PeriodFrequencyType.WHOLE_TERM.getValue().longValue(),
+                        codePrefix + PeriodFrequencyType.WHOLE_TERM.getCode(), "Whole term");
             break;
             default:
                 optionData = new EnumOptionData(PeriodFrequencyType.INVALID.getValue().longValue(), PeriodFrequencyType.INVALID.getCode(),
@@ -401,8 +411,6 @@ public class LoanEnumerations {
                 optionData = new LoanTransactionEnumData(LoanTransactionType.INCOME_POSTING.getValue().longValue(),
                         LoanTransactionType.INCOME_POSTING.getCode(), "Income Posting");
             break;
-            default:
-            break;
         }
         return optionData;
     }
@@ -467,8 +475,6 @@ public class LoanEnumerations {
                 optionData = new LoanStatusEnumData(LoanStatus.TRANSFER_ON_HOLD.getValue().longValue(),
                         LoanStatus.TRANSFER_ON_HOLD.getCode(), "Transfer on hold");
             break;
-            default:
-            break;
         }
 
         return optionData;
@@ -517,8 +523,8 @@ public class LoanEnumerations {
                         LoanProductParamType.REPAYMENT.getCode(), "repayment");
             break;
             default:
-                optionData = new EnumOptionData(LoanProductParamType.INVALID.getValue().longValue(),
-                        LoanProductParamType.INVALID.getCode(), "Invalid");
+                optionData = new EnumOptionData(LoanProductParamType.INVALID.getValue().longValue(), LoanProductParamType.INVALID.getCode(),
+                        "Invalid");
             break;
         }
         return optionData;
@@ -605,10 +611,14 @@ public class LoanEnumerations {
         }
         return optionData;
     }
+
     public static EnumOptionData interestRecalculationCompoundingNthDayType(final Integer id) {
-        if (id == null) { return null; }
+        if (id == null) {
+            return null;
+        }
         return interestRecalculationCompoundingNthDayType(NthDayType.fromInt(id));
     }
+
     public static EnumOptionData interestRecalculationCompoundingNthDayType(final NthDayType type) {
         final String codePrefix = "interestRecalculationCompounding.";
         long nthDayValue = type.getValue().longValue();
@@ -633,15 +643,19 @@ public class LoanEnumerations {
                 optionData = new EnumOptionData(nthDayValue, codePrefix + type.getCode(), "last");
             break;
             default:
-                optionData = new EnumOptionData(new Integer(0).longValue(), codePrefix + type.getCode(), "invalid");
+                optionData = new EnumOptionData(Integer.valueOf(0).longValue(), codePrefix + type.getCode(), "invalid");
             break;
         }
         return optionData;
     }
+
     public static EnumOptionData interestRecalculationCompoundingDayOfWeekType(final Integer id) {
-        if (id == null) { return null; }
+        if (id == null) {
+            return null;
+        }
         return interestRecalculationCompoundingDayOfWeekType(DayOfWeekType.fromInt(id));
     }
+
     public static EnumOptionData interestRecalculationCompoundingDayOfWeekType(final DayOfWeekType type) {
         final String codePrefix = "interestRecalculationCompounding.";
         EnumOptionData optionData = new EnumOptionData(type.getValue().longValue(), codePrefix + type.getCode(), type.toString());
@@ -723,8 +737,6 @@ public class LoanEnumerations {
                         LoanPreClosureInterestCalculationStrategy.TILL_REST_FREQUENCY_DATE.getCode(), "Till rest Frequency Date");
             break;
             case NONE:
-            break;
-            default:
             break;
         }
         return optionData;
